# medicar

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: django.yml
backend/: conftest.py  settings.py  urls.py  wsgi.py
backend/api/: admin.py  models.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_auto_20200922_2227.py
backend/api/tests/: test_apps.py  test_doctor.py  test_medical_appointment.py  test_schedule.py  test_specialty.py
backend/base/: admin.py
backend/base/migrations/: 0001_initial.py  0002_auto_20200919_1717.py
backend/base/tests/: test_apps.py  test_user.py  test_wsgi.py
backend/tests/: test_urls.py
contrib/: env-sample
